Add all changes

--- a/home.html
+++ b/home.html
@@ -4,11 +4,32 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css//home.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 		<title>English Game</title>
 	</head>
 
 	<body>
+		<div class="home">
+			<div class="container">
+				<h1 class="home-title">Welecome!</h1>
+				<ul class="wrapper">
+					<li class="icon facebook">
+						<span class="tooltip">Facebook</span>
+						<span><i class="fab fa-facebook-f"></i></span>
+					</li>
+					<li class="icon twitter">
+						<span class="tooltip">Twitter</span>
+						<span><i class="fab fa-twitter"></i></span>
+					</li>
+					<li class="icon instagram">
+						<span class="tooltip">Instagram</span>
+						<span><i class="fab fa-instagram"></i></span>
+					</li>
+				</ul>
+			</div>
+		</div>
+
 		<script src="./js/main.js"></script>
 		<script src="./js/data.js"></script>
 	</body>
