add home styles

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 		<div class="home">
 			<div class="container">
 				<h1 class="home-title">Welecome!</h1>
-				<ul class="wrapper">
+				<ul class="buttons-wrapper">
 					<li class="icon facebook">
 						<span class="tooltip">Facebook</span>
 						<span><i class="fab fa-facebook-f"></i></span>
