Add icons buttons

--- a/home.html
+++ b/home.html
@@ -14,22 +14,43 @@
 			<div class="container">
 				<h1 class="home-title">Welecome!</h1>
 				<ul class="buttons-wrapper">
-					<li class="icon facebook">
-						<span class="tooltip">Facebook</span>
-						<span><i class="fab fa-facebook-f"></i></span>
+					<li class="icon easy">
+						<span class="tooltip">Easy</span>
+						<span
+							><img
+								src="./images/baby-boy.png"
+								alt="baby"
+								width="50"
+								height="50"
+						/></span>
 					</li>
-					<li class="icon twitter">
-						<span class="tooltip">Twitter</span>
-						<span><i class="fab fa-twitter"></i></span>
+					<li class="icon medium">
+						<span class="tooltip">Medium</span>
+						<span
+							><img
+								src="./images/graduated.png"
+								alt="baby"
+								width="50"
+								height="50"
+						/></span>
 					</li>
-					<li class="icon instagram">
-						<span class="tooltip">Instagram</span>
-						<span><i class="fab fa-instagram"></i></span>
+					<li class="icon hard">
+						<span class="tooltip">Hard</span>
+						<span
+							><img
+								src="./images/einstein.png"
+								alt="baby"
+								width="50"
+								height="50"
+						/></span>
 					</li>
 				</ul>
 			</div>
 		</div>
-
+		<script
+			src="https://kit.fontawesome.com/069acdc5c8.js"
+			crossorigin="anonymous"
+		></script>
 		<script src="./js/main.js"></script>
 		<script src="./js/data.js"></script>
 	</body>
