add font online

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="./css/main.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 	<title>English Game</title>
 </head>
@@ -14,16 +17,16 @@
 
 	<form id="form" class="form">
 		<div class="username">
-			<input  id="name" type="text" placeholder="NAME" />
+			<input id="name" type="text" placeholder="NAME" />
 		</div>
 		<div class="password">
-			<input  id="surname" type="text" placeholder="SURNAME" />
+			<input id="surname" type="text" placeholder="SURNAME" />
 		</div>
 		<div class="age">
-			<input  id="age" type="number" placeholder="AGE" />
+			<input id="age" type="number" placeholder="AGE" />
 		</div>
 		<div class="login">
-			<button  id="btn"  class="btn" type="submit">SUBMIT</button>
+			<button id="btn" class="btn" type="submit">SUBMIT</button>
 
 		</div>
 	</form>
