--- a/home.html
+++ b/home.html
@@ -9,48 +9,51 @@
 		<title>English Game</title>
 	</head>
 
-	<body>
+	<body style="background-color: #57c5b6">
 		<div class="home">
 			<div class="container">
 				<h1 class="home-title">Welecome!</h1>
 				<ul class="buttons-wrapper">
 					<li class="icon easy">
-						<span class="tooltip">Easy</span>
-						<span
-							><img
-								src="./images/baby-boy.png"
-								alt="baby"
-								width="50"
-								height="50"
-						/></span>
+						<button class="easy-btn" value="20">
+							<span class="tooltip">Easy</span>
+							<span
+								><img
+									src="./images/baby-boy.png"
+									alt="baby"
+									width="50"
+									height="50"
+							/></span>
+						</button>
 					</li>
 					<li class="icon medium">
-						<span class="tooltip">Medium</span>
-						<span
-							><img
-								src="./images/graduated.png"
-								alt="baby"
-								width="50"
-								height="50"
-						/></span>
+						<button class="medium-btn" value="15">
+							<span class="tooltip">Medium</span>
+							<span
+								><img
+									src="./images/graduated.png"
+									alt="baby"
+									width="50"
+									height="50"
+							/></span>
+						</button>
 					</li>
 					<li class="icon hard">
-						<span class="tooltip">Hard</span>
-						<span
-							><img
-								src="./images/einstein.png"
-								alt="baby"
-								width="50"
-								height="50"
-						/></span>
+						<button class="hard-btn" value="10">
+							<span class="tooltip">Hard</span>
+							<span
+								><img
+									src="./images/einstein.png"
+									alt="baby"
+									width="50"
+									height="50"
+							/></span>
+						</button>
 					</li>
 				</ul>
 			</div>
 		</div>
-		<script
-			src="https://kit.fontawesome.com/069acdc5c8.js"
-			crossorigin="anonymous"
-		></script>
+
 		<script src="./js/main.js"></script>
 		<script src="./js/data.js"></script>
 	</body>
