Add game page and game js, home js

--- a/home.html
+++ b/home.html
@@ -54,7 +54,8 @@
 			</div>
 		</div>
 
-		<script src="./js/main.js"></script>
+		<script src="./js//home.js"></script>
+		<script src="./js/game.js"></script>
 		<script src="./js/data.js"></script>
 	</body>
 </html>
