--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/main.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+			rel="stylesheet"
+		/>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="./css/main.css" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+		<title>English Game</title>
+	</head>
 
-	<title>English Game</title>
-</head>
+	<body style="background-color: #fbbd5e">
+		<form id="form" class="form">
+			<div class="username">
+				<input id="name" type="text" placeholder="NAME" />
+			</div>
+			<div class="password">
+				<input id="surname" type="text" placeholder="SURNAME" />
+			</div>
+			<div class="age">
+				<input id="age" type="number" placeholder="AGE" />
+			</div>
+			<div class="login">
+				<button id="btn" class="btn" type="submit">SUBMIT</button>
+			</div>
+		</form>
 
-<body style="background-color: #fbbd5e">
-
-	<form id="form" class="form">
-		<div class="username">
-			<input id="name" type="text" placeholder="NAME" />
-		</div>
-		<div class="password">
-			<input id="surname" type="text" placeholder="SURNAME" />
-		</div>
-		<div class="age">
-			<input id="age" type="number" placeholder="AGE" />
-		</div>
-		<div class="login">
-			<button id="btn" class="btn" type="submit">SUBMIT</button>
-
-		</div>
-	</form>
-
-	<script src="./js/main.js"></script>
-</body>
-
+		<script src="./js/main.js"></script>
+		<script src="./js//home.js"></script>
+		<script src="./js/game.js"></script>
+		<script src="./js/data.js"></script>
+	</body>
 </html>
