Add all changes

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 						<p id="userName" class="user__name"></p>
 					</li>
 					<li>
-						<button class="logout__btn">
+						<button id="logout" class="logout__btn">
 							<img src="./images/logout.png" alt="log out img" width="50px" height="50px">
 						</button>
 					</li>
@@ -69,8 +69,6 @@
 
 
 	<script src="./js/main.js"></script>
-	<script src="./js//home.js"></script>
-	<script src="./js/game.js"></script>
 	<script src="./js/data.js"></script>
 </body>
 
