--- a/game.html
+++ b/game.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,500&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./css/game.css" />
 		<link rel="stylesheet" href="./css/home.css" />
 		<link rel="stylesheet" href="./css/main.css" />
@@ -11,10 +17,57 @@
 	</head>
 
 	<body style="background-color: #feff86">
-		<h1>game</h1>
+		<header class="header">
+			<div class="header__inner container">
+				<a href="#">
+					<img
+						class="logo"
+						src="./images/logo.png"
+						alt="img logo"
+						width="100px"
+						height="100px"
+				/></a>
+				<nav class="navbar">
+					<ul class="nav__list">
+						<li class="nav__item">
+							<a class="nav__link" href="#"> About</a>
+						</li>
+						<li class="nav__item">
+							<a class="nav__link" href="#"> Records</a>
+						</li>
+						<li class="nav__item">
+							<img
+								class="user__img"
+								src="./images//rabbit.png"
+								alt="rabbit img"
+								width="50px"
+								height="50px"
+							/>
+							<p id="userName" class="user__name"></p>
+						</li>
+						<li>
+							<button class="logout__btn">
+								<img
+									src="./images/logout.png"
+									alt="log out img"
+									width="50px"
+									height="50px"
+								/>
+							</button>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<div class="count-wrapper">
+				<div class="count">
+					Count:
+					<div class="count-number">0</div>
+				</div>
+			</div>
+		</main>
 		<script src="./js/main.js"></script>
-		<script src="./js//home.js"></script>
-		<script src="./js/game.js"></script>
 		<script src="./js/data.js"></script>
 	</body>
 </html>
