--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 						<p id="userName" class="user__name"></p>
 					</li>
 					<li>
-						<button class="logout__btn">
+						<button id="logout" type="button" class="logout__btn">
 							<img src="./images/logout.png" alt="log out img" width="50px" height="50px">
 						</button>
 					</li>
@@ -58,7 +58,7 @@
 					</button>
 				</li>
 				<li class="icon hard">
-					<button class="hard-btn" value="10">
+					<button  class="hard-btn" value="10">
 						<span class="tooltip">Hard</span>
 						<span><img src="./images/einstein.png" alt="baby" width="50" height="50" /></span>
 					</button>
