--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
 		<title>English Game</title>
 	</head>
